# qt-creator

./: qtcreator_ide_branding.pri
cmake/: QtCreatorIDEBranding.cmake
share/qtcreator/templates/wizards/files/cppheader/: file.h
share/qtcreator/templates/wizards/files/cppsource/: file.cpp
share/qtcreator/templates/wizards/info1a/Tp1_Final/: CMakeLists.txt  Tp1Supplement.cpp  wizard.json
share/qtcreator/templates/wizards/info1a/Tp1_Initial/: CMakeLists.txt  wizard.json
share/qtcreator/templates/wizards/info1a/Tp2_Initial/: CMakeLists.txt  wizard.json
share/qtcreator/templates/wizards/info1a/Tp2_Initial/Hop/: CMakeLists.txt  hop.cpp
share/qtcreator/templates/wizards/info1a/Tp2_Initial/Tennis/: CMakeLists.txt  tennis.cpp
share/qtcreator/templates/wizards/info1a/Tp3_Initial/: CMakeLists.txt  wizard.json
share/qtcreator/templates/wizards/info1a/Tp4_Initial/: CMakeLists.txt  gravitation.cpp  wizard.json
share/qtcreator/templates/wizards/info1a/Tp6_Initial/: CMakeLists.txt  Tp6.cpp  wizard.json
share/qtcreator/templates/wizards/info1a/Tp7_Initial/: CMakeLists.txt  main.cpp  vector.cpp  vector.h  wizard.json
share/qtcreator/templates/wizards/info1a/Tp8_Initial/: CMakeLists.txt  main.cpp  utils.cpp  utils.h  wizard.json
share/qtcreator/templates/wizards/projects/imagineapp/: CMakeLists.txt  main.cpp  wizard.json
src/plugins/: CMakeLists.txt
src/plugins/projectexplorer/: CMakeLists.txt  project.cpp  projectexplorer.pro  runconfigurationaspects.cpp  runconfigurationaspects.h  simpleprojectwizard.cpp
(+4 files in other folders)
